objects/College__c.object
<CustomObject>
    <fields>
        <fullName>CollegeOpt2__c</fullName>
        <label>CollegeOpt2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalTestValueSet1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CollegeOpt3__c</fullName>
        <label>CollegeOpt3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalPickListTest2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CollegeOpt__c</fullName>
        <label>CollegeOpt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalPickListTest1</valueSetName>
        </valueSet>
    </fields>
</CustomObject>